# deps

./: .gitignore  README.md  README_zh.md  deps.py  pyproject.toml
deps_resolver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
